# vibes

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
src/: main.rs  tests.rs
src/app/: mod.rs  state.rs
src/cache/: mod.rs
src/config/: mod.rs
src/events/: mod.rs
src/spotify/: auth.rs  library.rs  mod.rs  player.rs  queue.rs  search.rs  vibes.rs
src/ui/: mod.rs  theme.rs
src/ui/components/: help.rs  library.rs  mod.rs  player_bar.rs  playlists.rs  queue.rs  search.rs  sidebar.rs  vibes_screen.rs
