[package]
name = "vibes"
version = "0.1.0"
edition = "2021"
authors = ["vibes"]
description = "A beautiful Spotify TUI player for your terminal"

[[bin]]
name = "vibes"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Spotify API
rspotify = { version = "0.13", features = ["client-reqwest", "reqwest-rustls-tls"] }

# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# HTTP (for auth redirect server)
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tokio-tungstenite = "0.24"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "aio"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
dotenvy = "0.15"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
unicode-width = "0.2"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
open = "5"
urlencoding = "2"
futures = "0.3"
async-trait = "0.1"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
